--- a/style.css
+++ b/style.css
@@ -314,6 +314,7 @@ section button:hover {
     .header-flex {
         display: flex;
         align-items: center;
+        justify-content: space-between;
         padding: 4em;
     }
 
@@ -331,7 +332,7 @@ section button:hover {
     }
 
     .card-typo {
-        width: 50%;
+        width: 60%;
     }
 
     .container section * {
@@ -339,7 +340,7 @@ section button:hover {
     }
 
     .container img {
-        width: 50%;
+        width: 40%;
     }
 
     .container section:first-child {
