--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ footer {
     background-color: hsl(192, 100%, 9%);
     display: flex;
     flex-direction: column;
-    padding: 0em 1em 3em;
+    padding: 0em 2em 3em;
 }
 
 header,
@@ -181,6 +181,10 @@ footer section>* {
     margin: 0;
 }
 
+footer section h2 {
+    margin-bottom: 0.5em;
+}
+
 section p {
     color: hsl(208, 11%, 55%);
 }
@@ -222,6 +226,7 @@ svg {
     align-self: center;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 1em;
     margin-top: 2em;
 }
@@ -261,6 +266,19 @@ section button:hover {
 
 .header-logo-button button:hover {
     color: hsla(192, 100%, 9%, 0.6);
+}
+
+@media screen and (min-width: 750px) and (max-width: 1080px) {
+
+    .container,
+    header img,
+    .header-content h1 {
+        width: 60%;
+    }
+
+    footer section {
+        width: 70%;
+    }
 }
 
 @media screen and (min-width: 1080px) {
@@ -360,11 +378,11 @@ section button:hover {
 
     footer {
         margin-top: 8em;
-        padding: 0 10em 2.5em;
+        padding: 0 10em 4em;
     }
 
     footer>img {
-        width: 20%;
+        width: 25%;
     }
 
     .footer-flex {
@@ -397,13 +415,12 @@ section button:hover {
     .copyright {
         align-self: flex-end;
         margin-right: -5em;
-        margin-top: 7em;
     }
 
     .contact li {
         gap: 1.25em;
     }
-    
+
     svg {
         padding: 0.45em;
     }
@@ -421,12 +438,5 @@ section button:hover {
 
     .copyright {
         margin-right: 1em;
-    }
-}
-
-@media screen and (max-width: 450px) {
-    
-    .header-logo-button img {
-        margin: 2em 0;
     }
 }
