--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ html {
     margin: 0;
     padding: 0;
     text-align: center;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    list-style: none;
+    text-decoration: none;
+}
+
+*::-webkit-scrollbar {
+    display: none;
 }
 
 body {
@@ -64,6 +72,7 @@ button {
     border: none;
     cursor: pointer;
     transition: 250ms;
+    box-shadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.1);
 }
 
 .header-content button,
@@ -355,6 +364,19 @@ section button:hover {
 
     .card-typo {
         width: 60%;
+        overflow: hidden;
+    }
+
+    .card-typo div {
+        transform: translateX(-100%);
+        opacity: 0;
+        transition: 0.9s;
+    }
+
+    .show-card .card-typo div,
+    .active-card div {
+        transform: translateX(0);
+        opacity: 1;
     }
 
     .container section * {
